# Batch-PDTE

./: Readme.txt
batch_pdte_single_core/: CMakeLists.txt  Readme.txt  Readme_base.txt  Readme_tecmp_norm.txt  cdcmp_pdte.cpp  lrcmp_pdte.cpp  new_tree.cpp  rdcmp_pdte.cpp  rrcmp_pdte.cpp  tecmp_base_pdte.cpp  tecmp_norm_pdte.cpp  tecmp_pdte.cpp
batch_pdte_single_core/cmp_bench/: CMakeLists.txt  cdcmp.cpp  depth_test.cpp  lrcmp.cpp  rdcmp.cpp  rrcmp.cpp  tecmp.cpp  tecmp_base.cpp  tecmp_norm.cpp  tecmp_recursive.cpp  time_test.cpp
batch_pdte_single_core/include/: cmp.h  node.h  pdte.h  utils.h
batch_pdte_single_core/src/: CMakeLists.txt  cmp.cpp  node.cpp  pdte.cpp  utils.cpp
level_up_pdte_multi_core/: Readme.txt
level_up_pdte_multi_core/cmp_bench/: readme.txt
level_up_pdte_multi_core/src/: CMakeLists.txt  client.cpp  pdte.cpp  server.cpp
level_up_pdte_multi_core/src2/: client.cpp  main.cpp  server.cpp  utils.cpp
level_up_pdte_single_core/: Readme.txt
level_up_pdte_single_core/src/: client.cpp  pdte.cpp  server.cpp
level_up_pdte_single_core/src2/: server.cpp
sortinghat_pdte_single_core/: Readme.txt
sortinghat_pdte_single_core/data/heart_11bits/: y_test.csv
sortinghat_pdte_single_core/data/heart_11bits/breast_11bits/: x_test.csv
sortinghat_pdte_single_core/data/spam_11bits/: x_test.csv
sortinghat_pdte_single_core/src/: decision_tree.rs  lib.rs  main.rs  rlwe.rs
